# AutoPaperWorker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_AUDIT_REPORT.md  README.md  SCAN_REPORT.md  audit_report.md  config.researchclaw.example.yaml  project_scan_report.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: INDEX.md  README_DE.md  README_ES.md  README_FR.md  README_PT.md  ROADMAP.md  current_optimization_plan.md  desktop_workbench_plan.md  integration-guide.md  issue_tracker_v9.md  phase2_architecture_plan.md  stage_impls_refactor_plan.md  test-infrastructure-audit.md
researchclaw/: __main__.py  adapters.py  cli.py  cli_commands.py  config.py  cost_tracker.py  evolution.py  evolution_aevolve.py  exceptions.py  hardware.py  health.py  prompts.py  run_state.py
researchclaw/agents/: base.py
researchclaw/assessor/: __init__.py  comparator.py
scripts/: plot_iteration_showcase.py  test_beast_mode_e2e.py  test_code_agent_live.py  test_code_agent_sandbox.py  test_codegen_v2.py
tests/: conftest.py  e2e_docker_sandbox.py  e2e_real_llm.py  test_agentic_sandbox.py  test_analysis_result_stage.py  test_analysis_stage.py  test_anthropic.py  test_assessor.py  test_benchmark_agent.py  test_calendar.py  test_cli.py  test_code_agent.py  test_code_searcher.py  test_collaboration.py  test_compiler.py  test_convergence_evaluator.py  test_converter_architecture.py  test_copilot.py  test_custom_exceptions_architecture.py  test_data_assets.py  test_decision_agent.py  test_domain_detector.py  test_entry_point_validation.py  test_evolution_aevolve.py  test_experiment_code_agent_cli.py  test_experiment_design_stage.py  test_experiment_diagnosis.py  test_experiment_repair.py  test_experiment_runner.py  test_experiment_schema.py  test_experiment_visualize.py  test_experiment_workflow.py  test_figure_agent.py  test_from_stage_run_dir.py  test_hitl_advanced.py  test_hitl_branching.py  test_hitl_collaboration.py  test_hitl_escalation.py  test_hitl_foundation.py  test_hitl_integration.py  (+82 more)
(+309 files in other folders)
