[project]
name = "researchclaw"
version = "0.3.1"
description = "ResearchClaw - Autonomous Research Pipeline. Turn any research idea into a paper."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "arxiv>=2.1",
    "numpy>=1.24",
    "defusedxml>=0.7",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
anthropic = ["httpx>=0.24"]
web = ["scholarly>=1.7", "crawl4ai>=0.2", "tavily-python>=0.3"]
pdf = ["PyMuPDF>=1.23"]
gui = ["customtkinter>=5.2"]
remote = ["paramiko>=3.4"]
all = [
    "httpx>=0.24",
    "scholarly>=1.7",
    "crawl4ai>=0.2",
    "tavily-python>=0.3",
    "PyMuPDF>=1.23",
    "customtkinter>=5.2",
    "paramiko>=3.4",
    "huggingface-hub>=0.20",
    "matplotlib>=3.7",
    "scipy>=1.10",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "httpx>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit[toml]>=1.7",
]

[project.scripts]
researchclaw = "researchclaw.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=researchclaw --cov-report=term-missing:skip-covered --cov-report=html"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that exercise multiple components, external processes, or environment-specific behavior",
    "slow: tests that are slower than typical unit tests or rely on heavyweight setup",
    "live_api: tests that call real external APIs and require credentials",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["researchclaw"]

[tool.hatch.build.targets.wheel.force-include]
"researchclaw/templates/styles" = "researchclaw/templates/styles"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
